end cart order client services

--- a/BestStore.Web/appsettings.json
+++ b/BestStore.Web/appsettings.json
@@ -14,5 +14,8 @@
     "ApiKey": "your key",
     "SenderName": "Best Store",
     "SenderEmail": "app.dev.sender.317@gmail.com"
+  },
+  "CartSettings": {
+    "ShippingFee" :  6.5
   }
 }
