add paypal and test functionality all is okay end of the project source of the lecturer code https://www.udemy.com/course/aspnet-core-mvc-guide/

--- a/BestStore.Web/appsettings.json
+++ b/BestStore.Web/appsettings.json
@@ -16,6 +16,12 @@
     "SenderEmail": "app.dev.sender.317@gmail.com"
   },
   "CartSettings": {
-    "ShippingFee" :  6.5
+    "ShippingFee": 6.5
+  },
+  "PayPalSettings": {
+    "ClientId": "Your id",
+    "Secret": "Your Secret",
+    "Url": "https://api-m.sandbox.paypal.com"
   }
+
 }
