--- a/BestStore.Application/BestStore.Application.csproj
+++ b/BestStore.Application/BestStore.Application.csproj
@@ -16,7 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BestStore.Shared\BestStore.Shared.csproj" />
+    <ProjectReference Include="..\BestStore.Domain\BestStore.Domain.csproj" />
+    <ProjectReference Include="..\BestStore.Shared\BestStore.Domain.csproj" />
   </ItemGroup>
 
 </Project>
