--- a/BestStore.Web/BestStore.Web.csproj
+++ b/BestStore.Web/BestStore.Web.csproj
@@ -23,7 +23,8 @@
   <ItemGroup>
     <ProjectReference Include="..\BestStore.Application\BestStore.Application.csproj" />
     <ProjectReference Include="..\BestStore.Infrastructure\BestStore.Infrastructure.csproj" />
-    <ProjectReference Include="..\BestStore.Shared\BestStore.Shared.csproj" />
+    <ProjectReference Include="..\BestStore.Domain\BestStore.Domain.csproj" />
+    <ProjectReference Include="..\BestStore.Shared\BestStore.Domain.csproj" />
   </ItemGroup>
 
 </Project>
